logs/ts.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/ts'...
Compiling './lib/python3.5/site-packages/ts/auth.py'...
***   File "./lib/python3.5/site-packages/ts/auth.py", line 40
    print 'Go to the following link in your browser:'
                                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ts/config.py'...
***   File "./lib/python3.5/site-packages/ts/config.py", line 57
    print 'Get the {} consumer key pairs at {} (or use any other one if you are confident)'.format(
                                                                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ts/core.py'...
***   File "./lib/python3.5/site-packages/ts/core.py", line 136
    print s.encode('utf8')
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ts/utils.py'...
***   File "./lib/python3.5/site-packages/ts/utils.py", line 77
    print s
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ts-0.4.3.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
